--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     </head>
 
     <body>
+
+
         <h1>Welcome!</h1>
+        <div class="about">
+            <img class="doodles" alt="self cartoon" src="./images/cartoon-self.png"/>
+            <div id = "about-text">
+                <h2>About</h2>
+                <p>Hello! My name is Maya. Welcome to my portfolio-website! Here are a few things about me:</p>
+                <ul>
+                    <li>Current Junior at UC San Diego</li>
+                    <li>Majoring in Mathematics-Computer Science and minoring in Cognitive Science</li>
+                    <li>Current Break Through Tech AI Fellow @ UCLA </li>
+                    <li>Interested in software development and machine learning</li>
+                    <li>Dabbles in drawing, painting, and playing the piano</li>
+                </ul>
+            </div>
+        </div>
+
+
+
     </body>
 </html>
