--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li>Current Junior at UC San Diego</li>
                     <li>Majoring in Mathematics-Computer Science and minoring in Cognitive Science</li>
-                    <li>Current Break Through Tech AI Fellow @ UCLA </li>
+                    <li>Current Break Through Tech AI Fellow with UCLA and Cornell Tech </li>
                     <li>Interested in software development and machine learning</li>
                     <li>Dabbles in drawing, painting, and playing the piano</li>
                 </ul>
