--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     </head>
 
     <body>
-
+        <header>
+            <nav>
+                <ul class = "nav_links">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Resume</a></li>
+                </ul>
+            </nav>
+            <a class = "botton-link" href="#"><button>Contact</button></a>
+        </header>
 
         <h1>Welcome!</h1>
         <div class="about">
@@ -23,7 +32,7 @@
                 <p>Hello! My name is Maya. Welcome to my portfolio-website! Here are a few things about me:</p>
                 <ul>
                     <li>Current Junior at UC San Diego</li>
-                    <li>Majoring in Mathematics-Computer Science and minoring in Cognitive Science</li>
+                    <li>Majoring in Mathematics - Computer Science and minoring in Cognitive Science</li>
                     <li>Current Break Through Tech AI Fellow with UCLA and Cornell Tech </li>
                     <li>Interested in software development and machine learning</li>
                     <li>Dabbles in drawing, painting, and playing the piano</li>
