--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
 
     <body>
         <header>
-            <nav>
-                <ul class = "nav_links">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Resume</a></li>
+            <nav class = "navbar">
+                <ul class = "nav_menu">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Resume</a>
+                    </li>
                 </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </nav>
-            <a class = "botton-link" href="#"><button>Contact</button></a>
+            <a class = "nav-button" href="#"><button>Contact</button></a>
         </header>
 
         <h1>Welcome!</h1>
