--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <!-- Importing style sheet (css) -->
         <link rel="stylesheet" href="./style.css"/>
         <!-- TODO: Javascript -->
+        <script src="./script.js" defer></script>
     </head>
 
     <body>
         <header>
             <nav class = "navbar">
-                <ul class = "nav_menu">
+                <ul class = "nav-menu">
                     <li class="nav-item">
                         <a href="#" class="nav-link">About</a>
                     </li>
@@ -31,8 +32,8 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
+                <a class = "nav-button" href="#"><button>Contact</button></a>
             </nav>
-            <a class = "nav-button" href="#"><button>Contact</button></a>
         </header>
 
         <h1>Welcome!</h1>
