final changes of the day

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
         </header>
 
-        <h1>Welcome!</h1>
+        <!-- <h1>Welcome!</h1> -->
         <div class="about">
             <img class="doodles" alt="self cartoon" src="./images/cartoon-self.png"/>
             <div id = "about-text">
