--- a/index.html
+++ b/index.html
@@ -40,15 +40,18 @@
         <div class="about">
             <img class="doodles" alt="self cartoon" src="./images/cartoon-self.png"/>
             <div id = "about-text">
-                <h2>About</h2>
-                <p>Hello! My name is Maya. Welcome to my portfolio-website! Here are a few things about me:</p>
+                <h2>Hello,</h2>
+                <p>My name is Maya. Welcome to my website! I am a current third-year student at UC San Diego majoring in Mathematics-Computer Science and minoring in Cognitive Science. I created (am creating) this website to learn more about web dev and to share more about my background/experiences.</p>
+
+                <p>It is still a work in progress, but have a look around!</p>
+                <!-- <p>Hello! My name is Maya. Welcome to my portfolio-website! Here are a few things about me:</p>
                 <ul>
                     <li>Current Junior at UC San Diego</li>
                     <li>Majoring in Mathematics - Computer Science and minoring in Cognitive Science</li>
                     <li>Current Break Through Tech AI Fellow with UCLA and Cornell Tech </li>
                     <li>Interested in software development and machine learning</li>
                     <li>Dabbles in drawing, painting, and playing the piano</li>
-                </ul>
+                </ul> -->
             </div>
         </div>
 
