--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <nav class = "navbar">
                 <ul class = "nav-menu">
                     <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
@@ -52,6 +55,25 @@
                     <li>Interested in software development and machine learning</li>
                     <li>Dabbles in drawing, painting, and playing the piano</li>
                 </ul> -->
+            </div>
+            <div id = "quick-links-container">
+                <h3>Quick Links</h3>
+                <ul class="quick-links">
+                    <li>
+                        <a href="https://github.com/2mayap" target="_blank">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/mayap3/" target="_blank">LinkedIn</a>
+                    </li>
+                    <li>
+                        <a href="mailto:mnp001@ucsd.edu">Email</a>
+                    </li>
+                </ul>
+                
+            
+
+
+
             </div>
         </div>
 
