added about page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Importing style sheet (css) -->
         <link rel="stylesheet" href="./style.css"/>
-        <!-- TODO: Javascript -->
+        <!-- Importing js -->
         <script src="./script.js" defer></script>
     </head>
 
@@ -21,7 +21,7 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Projects</a>
