--- a/about.html
+++ b/about.html
@@ -81,7 +81,10 @@
             <div class="info-box">
                 <h3>Fun facts</h3>
                 <ul>
-                    <li>hi</li>
+                    <li>I dabble in the arts - you can check out some of my artwork here!</li>
+                    <li>I can draw a chicken in 5 seconds</li>
+                    <li>I play the piano, and my favorite song to play is Noctune in E Flat Major by Frederic Chopin</li>
+                    <li>I like to read, when I have time, and mystery books are my favorite!</li>
                 </ul>
             </div>
         </div>
