--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <title>About</title>
         <!-- TODO: Favicon -->
-        <meta name="description" content="About page for portfolio website">
+        <meta name="description" content="Contact page for portfolio website">
         <meta charset="utf-8">
         <meta name="author" content="Maya Patel">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,7 +37,7 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <a class = "nav-button" href="#"><button>Contact</button></a>
+                <a class = "nav-button" href="contact.html"><button>Contact</button></a>
             </nav>
         </header>
 
