--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <a class = "nav-button" href="#"><button>Contact</button></a>
+                <a class = "nav-button" href="contact.html"><button>Contact</button></a>
             </nav>
         </header>
 
