some content updates

--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
                 <h3>Previously</h3>
                 <ul>
                     <li>AI Studio Fellow @ Level Data (see projects)</li>
+                    <li>Grader (reader) for Linear Algebra (MATH 18) MATLAB assignments @ UCSD</li>
                     <li>Visual Design Apprenticeship (see projects)</li>
                     <li>Website designer for Sparkling Hearts Foundation</li>
                 </ul>
@@ -84,7 +85,7 @@
                     <li>I dabble in the arts - you can check out some of my artwork here!</li>
                     <li>I can draw a chicken in 5 seconds</li>
                     <li>I play the piano, and my favorite song to play is Noctune in E Flat Major by Frederic Chopin</li>
-                    <li>I like to read, when I have time, and mystery books are my favorite!</li>
+                    <li>I collect sea glass (I've found ceramic sea glass, sea glass marbles, and sea glass of all colors of the rainbow except orange!)</li>
                 </ul>
             </div>
         </div>
