--- a/index.html
+++ b/index.html
@@ -44,17 +44,23 @@
             <img class="doodles" alt="self cartoon" src="./images/cartoon-self.png"/>
             <div id = "about-text">
                 <h2>Hello,</h2>
-                <p>My name is Maya. Welcome to my website! I am a current third-year student at UC San Diego majoring in Mathematics-Computer Science and minoring in Cognitive Science. I created (am creating) this website to learn more about web dev and to share more about my background/experiences.</p>
+                <p>My name is Maya. Welcome to my website! I created (am creating) this website to learn more about web dev (HTML, CSS, and Javascript) and to share more about my background/experiences.</p>
 
                 <p>It is still a work in progress, but have a look around!</p>
-                <!-- <p>Hello! My name is Maya. Welcome to my portfolio-website! Here are a few things about me:</p>
+                <h3>Brief Summary</h3>
+                <p>I am a current third-year student at UC San Diego majoring in Mathematics-Computer Science and minoring in Cognitive Science.</p>
+                <h4>Tech Stack</h4>
                 <ul>
-                    <li>Current Junior at UC San Diego</li>
-                    <li>Majoring in Mathematics - Computer Science and minoring in Cognitive Science</li>
-                    <li>Current Break Through Tech AI Fellow with UCLA and Cornell Tech </li>
-                    <li>Interested in software development and machine learning</li>
-                    <li>Dabbles in drawing, painting, and playing the piano</li>
-                </ul> -->
+                    <li>Programming Languages: Python, C/C++, Java</li>
+                    <li>Libraries: NumPy, scikit-learn, Pandas, matplotlib</li>
+                    <li>Environments: Visual Studio Code, Jupyter Notebooks, Linux</li>
+                    <li>Tools: GNU Debugger (GDB), Git (GitHub), Microsoft Office</li>
+                </ul>
+                <h4>Professional Experience</h4>
+                <ul>
+                    <li>AI Studio Fellow @ Level Data</li>
+                    <li>Reader (grader) for Linear Algebra @ UCSD</li>
+                </ul>
             </div>
             <div id = "quick-links-container">
                 <h3>Quick Links</h3>
