added some projects

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                         <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Projects</a>
+                        <a href="projects.html" class="nav-link">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Resume</a>
@@ -84,7 +84,7 @@
                 <ul>
                     <li>I dabble in the arts - you can check out some of my artwork here!</li>
                     <li>I can draw a chicken in 5 seconds</li>
-                    <li>I play the piano, and my favorite song to play is Noctune in E Flat Major by Frederic Chopin</li>
+                    <li>I play the piano, and my favorite song to play is Nocturne in E Flat Major by Frederic Chopin</li>
                     <li>I collect sea glass (I've found ceramic sea glass, sea glass marbles, and sea glass of all colors of the rainbow except orange!)</li>
                 </ul>
             </div>
