--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Projects</a>
+                        <a href="projects.html" class="nav-link">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Resume</a>
