--- a/about.html
+++ b/about.html
@@ -60,9 +60,13 @@
             <div class="info-box">
                 <h3>Previously</h3>
                 <ul>
-                    <li>AI Studio Fellow @ Level Data (see projects)</li>
+                    <li>AI Studio Fellow @ Level Data (see
+                        <a href="projects.html">Projects</a> page)
+                    </li>
                     <li>Grader (reader) for Linear Algebra (MATH 18) MATLAB assignments @ UCSD</li>
-                    <li>Visual Design Apprenticeship (see projects)</li>
+                    <li>Visual Design Apprenticeship (see
+                        <a href="projects.html">Projects</a> page)
+                    </li>
                     <li>Website designer for Sparkling Hearts Foundation</li>
                 </ul>
             </div>
