--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         </div>
         <div class="contact-methods">
             <ul>
-                <li>Email (preferred): mnp001@ucsd.edu</li>
+                <li>Email (preferred): 2mayap@gmail.com</li>
                 <li>LinkedIn: linkedin.com/in/mayap3/</li>
             </ul>
 
