--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href="https://www.linkedin.com/in/mayap3/" target="_blank">LinkedIn</a>
                     </li>
                     <li>
-                        <a href="mailto:mnp001@ucsd.edu">Email</a>
+                        <a href="mailto:2mayap@gmail.com">Email</a>
                     </li>
                 </ul>
                 
