--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,7 @@
         <div class="info-columns">
             <div class="info-box">
                 <h3>Predicting Proficiency</h3>
+                <h4>Aug. 2024 - Dec. 2024</h4>
                 <ul>
                     <li>Fall AI Studio Project through Break Through Tech with Level Data</li>
                     <li>Collaborated a team of 3 other students to predict student proficiency and identify which factors contribute most to sudent proficiency</li>
@@ -60,6 +61,7 @@
             </div>
             <div class="info-box">
                 <h3>Portfolio Website</h3>
+                <h4>Dec. 2024 - Present</h4>
                 <ul>
                     <li>Developed a personal portfolio website using HTML, CSS, and Javascript components</li>
                     <li>Utilized git and GitHub for version control and deployment</li>
@@ -71,9 +73,17 @@
             </div>
             <div class="info-box">
                 <h3>Visual Design Apprenticeship (VDA)</h3>
-            </div>
-            <div class="info-box">
-                <h3>File Compression Tool</h3>
+                <h4>Jan. 2023 - April 2023</h4>
+                <ul>
+                    <li>Engaged in a 12-week design program through UCSD Design Co.</li>
+                    <li>Utilized Figma and Adobe Illustrator to compose various projects, including merch design, an app homepage prototype, and a music festival poster.</li>
+                    <li>Learned more about accessibility and UX/UI design</li>
+                    <li>Collaborated with another apprentice to perform competitive analysis, design a logo, and prepare a mockup for a brand case study.</li>
+                    <li>Fun fact: This experience inspired me to minor in Cognitive Science to learn more about UX/UI design</li>
+                    <li>
+                        <a href="https://foil-attempt-75e.notion.site/vda-journal" target="_blank">Link to Notion Portfolio</a>
+                    </li>
+                </ul>
             </div>
         </div>
 
