--- a/resume.html
+++ b/resume.html
@@ -40,14 +40,10 @@
         </header>
 
         <div class="page-title">
-            <h2>Contact</h2>
+            <h2>Resume</h2>
         </div>
-        <div class="contact-methods">
-            <ul>
-                <li>Email (preferred): 2mayap@gmail.com</li>
-                <li>LinkedIn: linkedin.com/in/mayap3/</li>
-            </ul>
-
+        <div class="resume-holder">
+            <iframe src="./images/website-resume.pdf" title="resume-pdf"></iframe>
         </div>
     </body>
     
