--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                         <a href="projects.html" class="nav-link">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Resume</a>
+                        <a href="resume.html" class="nav-link">Resume</a>
                     </li>
                 </ul>
                 <div class="hamburger">
