updates page info

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <title>About</title>
         <!-- TODO: Favicon -->
-        <meta name="description" content="Contact page for portfolio website">
+        <meta name="description" content="about page for portfolio website">
         <meta charset="utf-8">
         <meta name="author" content="Maya Patel">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -86,7 +86,7 @@
             <div class="info-box">
                 <h3>Fun facts</h3>
                 <ul>
-                    <li>I dabble in the arts - you can check out some of my artwork here!</li>
+                    <li>I dabble in the arts (watercolor and colored pencil are my mediums of choice)</li>
                     <li>I can draw a chicken in 5 seconds</li>
                     <li>I play the piano, and my favorite song to play is Nocturne in E Flat Major by Frederic Chopin</li>
                     <li>I collect sea glass (I've found ceramic sea glass, sea glass marbles, and sea glass of all colors of the rainbow except orange!)</li>
