--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Maya's Personal Portfolio Website</title>
+        <title>Contact</title>
         <!-- TODO: Favicon -->
-        <meta name="description" content="Portfolio website built using html, css, Javascript">
+        <meta name="description" content="contact page for portfolio websitet">
         <meta charset="utf-8">
         <meta name="author" content="Maya Patel">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
