--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                     <li>Built linear regression, decision tree, random forest, and gradient boosted decision tree models to predict proficiency with over 70% accuracy </li>
                     <li>Results aim to help school administrators support students at risk of falling below proficiency</li>
                     <li>Learn more and find our code in our 
-                        <a href="https://github.com/level-data-1a/predicting-proficiency">GitHub Repository</a>
+                        <a href="https://github.com/level-data-1a/predicting-proficiency" target="_blank">GitHub Repository</a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +67,7 @@
                     <li>Utilized git and GitHub for version control and deployment</li>
                     <li>Added hover animations, responsive navbar, and visual design components</li>
                     <li>
-                        <a href="https://github.com/2mayap/2mayap.github.io">GitHub Repository</a>
+                        <a href="https://github.com/2mayap/2mayap.github.io" target="_blank">GitHub Repository</a>
                     </li>
                 </ul>
             </div>
