--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
                     <li class="nav-item">
                         <a href="projects.html" class="nav-link">Projects</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="resume.html" class="nav-link">Resume</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -53,8 +53,8 @@
                     <li>Majoring in Mathematics-Computer Science</li>
                     <li>Minoring in Cognitive Science</li>
                     <li>Break Through Tech AI Fellow</li>
-                    <li>Active member of Women in Computing</li>
-                    <li>Current courses: Introduction to Mathematical Statistics I, Data Science in Practice, Theory of Computability</li>
+                    <li>Participating in the WiDS Datathon 2025</li>
+                    <li>Current courses: Introduction to Mathematical Statistics I, Data Science in Practice, Machine Learning: Learning Algorithms</li>
                 </ul>
             </div>
             <div class="info-box">
@@ -73,7 +73,6 @@
             <div class="info-box">
                 <h3>In the near future</h3>
                 <ul>
-                    <li>I will be starting the Spring Studio Project with Break Through Tech - come by soon to see the project we will work on for the Kaggle Competition!</li>
                     <li>I am applying for Summer 2025 internship opportunities in software development, machine learning, and data analysis</li>
                 </ul>
             </div>
@@ -86,8 +85,8 @@
             <div class="info-box">
                 <h3>Fun facts</h3>
                 <ul>
-                    <li>I dabble in the arts (watercolor and colored pencil are my mediums of choice)</li>
-                    <li>I can draw a chicken in 5 seconds</li>
+                    <li>I draw</li>
+                    <li>I like reading mystery novels</li>
                     <li>I collect sea glass (I've found ceramic sea glass, sea glass marbles, and sea glass of all colors of the rainbow except orange!)</li>
                 </ul>
             </div>
