--- a/projects.html
+++ b/projects.html
@@ -26,9 +26,9 @@
                     <li class="nav-item">
                         <a href="projects.html" class="nav-link">Projects</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="resume.html" class="nav-link">Resume</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -51,7 +51,6 @@
                     <li>Fall AI Studio Project through Break Through Tech with Level Data</li>
                     <li>Collaborated a team of 3 other students to predict student proficiency and identify which factors contribute most to sudent proficiency</li>
                     <li>Leveraged Python’s scikit-learn, Pandas, NumPy, Matplotlib, and Seaborn libraries to perform EDA, create visualizations, and develop ML models</li>
-                    <li>Utilized unsupervised techniques such as PCA to extract patterns in data and perform feature selection</li>
                     <li>Built linear regression, decision tree, random forest, and gradient boosted decision tree models to predict proficiency with over 70% accuracy </li>
                     <li>Results aim to help school administrators support students at risk of falling below proficiency</li>
                     <li>Learn more and find our code in our 
