--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
                     <li class="nav-item">
                         <a href="projects.html" class="nav-link">Projects</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="resume.html" class="nav-link">Resume</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
