--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
                     <li class="nav-item">
                         <a href="projects.html" class="nav-link">Projects</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a href="resume.html" class="nav-link">Resume</a>
-                    </li> -->
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -39,16 +36,10 @@
             </nav>
         </header>
 
-        <!-- <h1>Welcome!</h1> -->
         <div class="about">
-            <img class="doodles" alt="self cartoon" src="./images/cartoon-self.png"/>
             <div id = "about-text">
                 <h2>Hello,</h2>
-                <p>My name is Maya. Welcome to my website! I created (am creating) this website to learn more about web dev (HTML, CSS, and Javascript) and to share more about my background/experiences.</p>
-
-                <p>It is still a work in progress, but have a look around!</p>
-                <h3>Brief Summary</h3>
-                <p>I am a current third-year student at UC San Diego majoring in Mathematics-Computer Science and minoring in Cognitive Science.</p>
+                <p>My name is Maya. I am a senior at UCSD studying Math and Computer Science.</p>
                 <h4>Tech Stack</h4>
                 <ul>
                     <li>Programming Languages: Python, C/C++, Java</li>
