--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <a class = "nav-button" href="contact.html"><button>Contact</button></a>
             </nav>
         </header>
 
@@ -43,12 +42,13 @@
                 <h4>Tech Stack</h4>
                 <ul>
                     <li>Programming Languages: Python, C/C++, Java</li>
-                    <li>Libraries: NumPy, scikit-learn, Pandas, matplotlib</li>
+                    <li>Libraries: NumPy, scikit-learn, Pandas, Matplotlib</li>
                     <li>Environments: Visual Studio Code, Jupyter Notebooks, Linux</li>
                     <li>Tools: GNU Debugger (GDB), Git (GitHub), Microsoft Office</li>
                 </ul>
                 <h4>Professional Experience</h4>
                 <ul>
+                    <li>Machine Learning Engineer Intern @ General Atomics</li>
                     <li>AI Studio Fellow @ Level Data</li>
                     <li>Reader (grader) for Linear Algebra @ UCSD</li>
                 </ul>
