Update about and home

--- a/about.html
+++ b/about.html
@@ -62,29 +62,24 @@
                     <!-- <li>AI Studio Fellow @ Level Data (see
                         <a href="projects.html">Projects</a> page)
                     </li> -->
-                    <p>My goal after graduation is to apply my math/cs knowledge in a software development or machine learning role after graduation. I am particularly interested in the bioscience and medical device industries.</p>
-                    <br>
-                    <p>Break Through Tech AI</p>
-                    <p>Level Data project</p>
-                    <p>Machine Learning Engineer Intern</p>
-                    <p>Say looking for opportunities to explore biotech/medical devices this year</p>
+                    <p>My goal is to apply my math/cs knowledge in a software development or machine learning role after graduation. I am particularly interested in the biotech/life science and medical device industries.</p>
                 </ul>
             </div>
             <div class="info-box">
-                <h4>Other areas I have explored during my time at UCSD</h4>
+                <h4>Other Areas I Have Explored During My Time at UCSD</h4>
                 <ul>
-                    <li>VDA (add link to VDA jounral, particularly proud of my chicken)</li>
-                    <li>HKN Engineering Outreach (cybersecurity, embedded systems walkie talkie)</li>
-                    <li>Interesting classes not related to my major/minor: Beethoven & the Beatles (my hw was to attend symphonies and listen to music, it was the best!), Volcanoes (key takeaway: beware of brain eating ameobas in bodies of warm water), Cancer Biology, ballet (currently taking!)</li>
+                    <li>Teaching/pedagogy: Volunteered for Eta Kappa Nu's engineering outreach program to develop & deliver computer science lessons (e.g., cryptography, embedded systems) at K-12 schools</li>
+                    <li>Design: I participated in UCSD Design Co.'s Visual Design Apprenticeship
+                        (<a href="https://foil-attempt-75e.notion.site/VDA-Journal-2f9c47c8909d462985ad5111b928ce06" target="_blank">Link to portfolio</a>)
+                    </li>
                 </ul>
             </div>
             <div class="info-box">
                 <h4>Fun facts</h4>
                 <ul>
-                    <li>I draw/paint.</li>
-                    <li>I like walking/hiking.</li>
-                    <li>I collect sea glass (I've found ceramic sea glass, sea glass marbles, and sea glass of all colors of the rainbow except orange!). Interestingly enough, I stopped finding sea glass After
-                        moving to UCSD (i.e. 15 min walk from beach oof). My collection is still my favorite thing to show off though... :/
+                    <li>I draw/paint</li>
+                    <li>I like walking/hiking</li>
+                    <li>I collect sea glass (I've found ceramic sea glass, sea glass marbles, and sea glass of all colors of the rainbow except orange!)
                     </li>
                 </ul>
             </div>
