--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="about">
             <div id = "about-text">
-                <h2>Hello,</h2>
+                <h2>Hello!</h2>
                 <p>My name is Maya. I am a senior at UCSD studying Math and Computer Science.</p>
                 <h4>Tech Stack</h4>
                 <ul>
