--- a/projects.html
+++ b/projects.html
@@ -35,15 +35,22 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <a class = "nav-button" href="contact.html"><button>Contact</button></a>
             </nav>
         </header>
 
-        <div class="page-title">
-            <h2>Projects</h2>
-        </div>
-
-        <div class="info-columns">
+        <div class="about">
+            <div class="info-box">
+                <h3>Intern Project: LLMs for Unit Testing</h3>
+                <h4>Jun 2025 - August 2025</h4>
+                <ul>
+                    <li>Performed a literature search to research different approaches of using LLMs to generate unit tests</li>
+                    <li>Developed an experimentation framework using Python and AWS Bedrock LLMs to explore how to best prompt LLMs to generate high coverage unit tests for C++ methods</li>
+                    <li>Conducted six experiments to determine the most effective types and amounts of context (e.g., relevant constructors, methods) needed for LLMs to write accurate unit tests that compile</li>
+                    <li>Built a Retrieval Augmented Generation (RAG) system that automatically retrieves and appends context (e.g., header file code chunks) to LLM prompts</li>
+                    <li>Wrote a report summarizing methods, experiment results, and recommendations for future work</li>
+                    
+                </ul>
+            </div>
             <div class="info-box">
                 <h3>Predicting Proficiency</h3>
                 <h4>Aug. 2024 - Dec. 2024</h4>
@@ -51,7 +58,7 @@
                     <li>Fall AI Studio Project through Break Through Tech with Level Data</li>
                     <li>Collaborated a team of 3 other students to predict student proficiency and identify which factors contribute most to sudent proficiency</li>
                     <li>Leveraged Python’s scikit-learn, Pandas, NumPy, Matplotlib, and Seaborn libraries to perform EDA, create visualizations, and develop ML models</li>
-                    <li>Built linear regression, decision tree, random forest, and gradient boosted decision tree models to predict proficiency with over 70% accuracy </li>
+                    <li>Built linear regression, decision tree, random forest, and gradient boosted decision tree models to predict proficiency F1 scores over 0.75 </li>
                     <li>Results aim to help school administrators support students at risk of falling below proficiency</li>
                     <li>Learn more and find our code in our 
                         <a href="https://github.com/level-data-1a/predicting-proficiency" target="_blank">GitHub Repository</a>
@@ -59,30 +66,19 @@
                 </ul>
             </div>
             <div class="info-box">
-                <h3>Portfolio Website</h3>
-                <h4>Dec. 2024 - Present</h4>
+                <h3>WiDS Datathon 2025</h3>
+                <h4>Jan. 2025 - April 2025</h4>
                 <ul>
-                    <li>Developed a personal portfolio website using HTML, CSS, and Javascript components</li>
-                    <li>Utilized git and GitHub for version control and deployment</li>
-                    <li>Added hover animations, responsive navbar, and visual design components</li>
-                    <li>
-                        <a href="https://github.com/2mayap/2mayap.github.io" target="_blank">GitHub Repository</a>
-                    </li>
+                    <li>Project context: ADHD in females can be difficult to detect and there is evidence that many are left undiagnosed</li>
+                    <li>Led a project team of 3 to build a MultiOutputClassifier model using RidgeClassifier to predict sex and ADHD diagnoses based on fMRI data</li>
+                    <li>Managed project timelines by scheduling meetings and assigning responsibilities for each sprint</li>
+                    <li>I specifically focused on the exploratory data analysis and data preprocessing phases; for example, I used KNN to predict and fill null values, setting the foundation for a ridge classifier model that achieved an F1 score of 0.74
+                    <li>Our team placed in the top 20% of 1,075 teams</li>
                 </ul>
             </div>
             <div class="info-box">
-                <h3>Visual Design Apprenticeship (VDA)</h3>
-                <h4>Jan. 2023 - April 2023</h4>
-                <ul>
-                    <li>Engaged in a 12-week design program through UCSD Design Co.</li>
-                    <li>Utilized Figma and Adobe Illustrator to compose various projects, including merch design, an app homepage prototype, and a music festival poster.</li>
-                    <li>Learned more about accessibility and UX/UI design</li>
-                    <li>Collaborated with another apprentice to perform competitive analysis, design a logo, and prepare a mockup for a brand case study.</li>
-                    <li>Fun fact: This experience inspired me to minor in Cognitive Science to learn more about UX/UI design</li>
-                    <li>
-                        <a href="https://foil-attempt-75e.notion.site/vda-journal" target="_blank">Link to Notion Portfolio</a>
-                    </li>
-                </ul>
+                <h3>Analyzing ER Visit Times: The Impact of Income, Gender, and Race</h3>
+                <h4>Feb. 2025 - March 2025</h4>
             </div>
         </div>
 
