--- a/projects.html
+++ b/projects.html
@@ -56,9 +56,10 @@
                 <h4>Aug. 2024 - Dec. 2024</h4>
                 <ul>
                     <li>Fall AI Studio Project through Break Through Tech with Level Data</li>
-                    <li>Collaborated a team of 3 other students to predict student proficiency and identify which factors contribute most to sudent proficiency</li>
-                    <li>Leveraged Python’s scikit-learn, Pandas, NumPy, Matplotlib, and Seaborn libraries to perform EDA, create visualizations, and develop ML models</li>
-                    <li>Built linear regression, decision tree, random forest, and gradient boosted decision tree models to predict proficiency F1 scores over 0.75 </li>
+                    <li>Collaborated in a team of 3 to predict student proficiency and identify which factors contribute most to sudent proficiency</li>
+                    <li>Leveraged Python’s scikit-learn, Pandas, NumPy, Matplotlib, and Seaborn libraries to perform exploratory data analysis, create visualizations, and develop ML models</li>
+                    <li>Trained linear regression, decision tree, random forest, and gradient boosted decision tree models to predict proficiency</li>
+                    <li>Achieved F1 scores over 0.75 </li>
                     <li>Results aim to help school administrators support students at risk of falling below proficiency</li>
                     <li>Learn more and find our code in our 
                         <a href="https://github.com/level-data-1a/predicting-proficiency" target="_blank">GitHub Repository</a>
@@ -70,15 +71,11 @@
                 <h4>Jan. 2025 - April 2025</h4>
                 <ul>
                     <li>Project context: ADHD in females can be difficult to detect and there is evidence that many are left undiagnosed</li>
-                    <li>Led a project team of 3 to build a MultiOutputClassifier model using RidgeClassifier to predict sex and ADHD diagnoses based on fMRI data</li>
+                    <li>Led a project team of 3 to build a Multi Output Classifier model using Ridge Classifier to predict sex and ADHD diagnoses based on fMRI data</li>
                     <li>Managed project timelines by scheduling meetings and assigning responsibilities for each sprint</li>
                     <li>I specifically focused on the exploratory data analysis and data preprocessing phases; for example, I used KNN to predict and fill null values, setting the foundation for a ridge classifier model that achieved an F1 score of 0.74
                     <li>Our team placed in the top 20% of 1,075 teams</li>
                 </ul>
-            </div>
-            <div class="info-box">
-                <h3>Analyzing ER Visit Times: The Impact of Income, Gender, and Race</h3>
-                <h4>Feb. 2025 - March 2025</h4>
             </div>
         </div>
 
